flapivor/tests/tests-m3/hopix/typechecker/good/andpatterns.hopix
type t () = A | B

val test1 = A ? { A & A => 0 | B => 1 }