flapivor/tests/tests-m3/hopix/typechecker/bad/orpatterns.hopix
type t () = A (int) | B (int) | C

val test1 : int = A (0) ? {
| A (x : int) | B (x : int) => x
| D => 0
}

